Update about and footer components

--- a/views/components/about.ejs
+++ b/views/components/about.ejs
@@ -60,7 +60,7 @@
               different levels of experience transform your business.
             </p>
             <a
-              href="#"
+              href="/register"
               class="boxed-btn3 wow fadeInLeft"
               data-wow-duration="1s"
               data-wow-delay=".7s"
