--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -21,7 +21,7 @@
                   Insitute of Management Sciences, Peshawar
                 </h3>
                 <a
-                  href="#"
+                  href="/register"
                   class="boxed-btn3 mt-3 wow fadeInUp"
                   data-wow-duration="1s"
                   data-wow-delay=".6s"
