Registeration Form Updated

--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -205,8 +205,10 @@
                             </div>
                         </div>
                     </div>
-
-
+                </div>
+                <div class="mb-3 mt-2">
+                    <label for="ambassador" class="form-label">Ambassador <span class="text-body-secondary small">(optional)</span></label>
+                    <input type="text" class="form-control" name="ambassador" id="ambassador" placeholder="Enter name of ambassador (if any)"/>
                 </div>
             </div>
         </div>
