--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -1,102 +1,91 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="zxx">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Portal</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"/>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Register | IMOlympiad</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        .testimonial {
-            color: #ffffff;
-            background: linear-gradient(45deg, #ff0000, #ffffff);
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-            border-radius: 15px;
-            overflow: hidden;
-        }
+    <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-        .testimonial img {
-            width: 70%;
-            margin-top: 20px;
-            border-radius: 50%;
-        }
+    <!-- CSS here -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/themify-icons/0.1.2/css/themify-icons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gijgo@1.9.13/css/gijgo.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flaticon/3.3.0/font/flaticon.css" />
+    <link rel="stylesheet" href="css/slicknav.css" />
 
-        .testimonial h2 {
-            font-size: 2em;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .testimonial p {
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-
-        .border {
-            background-color: #ffffff;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-            border-radius: 15px;
-        }
-
-        .options {
-            text-align: center;
-            margin-top: 40px;
-        }
-
-        .options a {
-            display: inline-block;
-            margin: 10px;
-            padding: 15px 30px;
-            background-color: red;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 1.2em;
-            transition: background-color 0.3s ease-in-out;
-        }
-
-        .options a:hover {
-            background-color: #2ecc71;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 <body>
+     <!-- header-start -->
+    <%- include('./components/header.ejs') %>
 
-    <section class="testimonial py-5" id="testimonial">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 py-5 text-white text-center">
-                    <div class="">
-                        <div class="card-body">
-                            <img src="http://www.ansonika.com/mavia/img/registration_bg.svg" alt="Registration Image">
-                            <h2 class="py-3">Registration</h2>
+    <!-- header-end -->
+ <!-- bradcam_area -->
+ <div class="bradcam_area">
+    <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay">
+          <div class="container">
+                <div class="row align-items-center justify-content-center">
+                   <div class="col-xl-12">
+                      <div class="bradcam_text text-center">
+                        <div class="shape_1 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
+                            <img src="img/shape/shape_1.svg" alt="">
                         </div>
-                    </div>
+                        <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".3s">
+                            <img src="img/shape/shape_2.svg" alt="">
+                        </div>
+                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Registeration</h3>
+                      </div>
+                   </div>
                 </div>
-                <div class="col-md-6 py-5 border">
-                    <h4 class="pb-4 text-center">Welcome to our registration Portal</h4>
+          </div>
+       </div>
+ </div>
+<!-- bradcam_area end -->
 
-                    <div><h3 style="color: #333; text-align: center;">Please select the option below</h3></div>
-                    <div class="options">
-                        <a href="/imsregister">Are you an IM Sciences student? Click here</a>
-                        <a href="outsiderregister">Are you an Outsider? Click here</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!-- about_area_start  -->
+<%- include('./components/imStudentRegister.ejs') %>
 
+<!-- about_area_end  -->
+
+
+    <!-- JS here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.5.0/modernizr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollIt/1.0.11/jquery.scrollit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollup/2.4.1/jquery.scrollUp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gijgo@1.9.13/js/gijgo.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.slicknav.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.4.1/tilt.jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-plugins/1.0.0/plugins.js"></script>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxchimp/1.3.0/jquery.ajaxchimp.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mailchimp-api-v3/3.0.9/mailchimp-api.min.js"></script>
+
+    <script src="/js/main.js"></script>
 </body>
 </html>
