--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -28,7 +28,7 @@
               <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="buy_tkt">
                   <div class="book_btn d-none d-lg-block">
-                    <a href="/imsregister">register</a>
+                    <a href="/register">register</a>
                   </div>
                 </div>
               </div>
