Changes in registeration form

--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -25,7 +25,7 @@
                 </div>
                 <div class="mb-3" id="studentIdInput" style="display: none;">
                     <label for="studentIdImage" class="form-label">Upload student ID card</label>
-                    <input type="file" class="form-control" id="studentIdImage" name="studentIdImage" />
+                    <input type="file" class="form-control" id="studentIdImage" name="studentIdImage" accept="image/png, image/jpeg" />
                 </div>
                 <div class="mb-3">
                     <label for="studentImage" class="form-label">Upload Your Picture</label>
@@ -170,18 +170,12 @@
                                 <label for="badmintonSecondPlayerName" class="form-label">Name</label>
                                 <input type="text" class="form-control" name="badmintonSecondPlayerName" id="badmintonSecondPlayerName" placeholder="Enter Player Name" />
                             </div>
-                            <div class="mb-2">
-                                <label for="badmintonSecondPlayerFatherName" class="form-label">Father Name</label>
-                                <input type="text" class="form-control" name="badmintonSecondPlayerFatherName" id="badmintonSecondPlayerFatherName" placeholder="Enter Player Father Name" />
-                            </div>
+                            
                             <div class="mb-2">
                                 <label for="badmintonSecondPlayerContact" class="form-label">Contact Number</label>
                                 <input type="number" class="form-control" name="badmintonSecondPlayerContact" id="badmintonSecondPlayerContact" placeholder="Enter Player Contact Number" />
                             </div>
-                            <div class="mb-2">
-                                <label for="badmintonSecondPlayerEmail" class="form-label">Email</label>
-                                <input type="email" class="form-control" name="badmintonSecondPlayerEmail" id="badmintonSecondPlayerEmail" placeholder="Enter Player Email" />
-                            </div>
+                            
                             <div class="mb-2">
                                 <label for="badmintonSecondPlayerCnic" class="form-label">CNIC</label>
                                 <input type="email" class="form-control" name="badmintonSecondPlayerCnic" id="badmintonSecondPlayerCnic" placeholder="Enter Player CNIC" />
