--- a/views/components/imStudentRegister.ejs
+++ b/views/components/imStudentRegister.ejs
@@ -314,6 +314,11 @@
                 <div><p id="socialeventstotalprice"></p></div>
                </div>
 
+               <div id="discountDiv" class="discountTotal d-flex justify-content-between align-items-center">
+                <p class="checkoutlabel text-success">Discount:</p>
+                <p id="dicountPrice" class="text-success"></p>
+               </div>
+
                <div class="finalTotal mt-3 pt-2 d-flex justify-content-between align-items-center">
                 <div><p class="finaltotallabel">Total:</p></div>
                 <div><p id="finaltotalprice"></p></div>
